--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,14 @@
 
 <body class="page-body">
 
-  <header data-test="header" class="header">
+  <header class="header" data-test="header">
     <div class="container header__container">
       <button class="header__burger-button burger" type="button">
         <span class="visually-hidden">Открыть меню</span>
-        <svg width="22" height="16" class="burger__open-icon">
+        <svg class="burger__open-icon" width="22" height="16">
           <use href="/__spritemap#sprite-burger-open"></use>
         </svg>
-        <svg width="18" height="18" class="burger__close-icon">
+        <svg class="burger__close-icon" width="18" height="18">
           <use href="/__spritemap#sprite-burger-close"></use>
         </svg>
       </button>
@@ -59,7 +59,7 @@
   </header>
 
   <main class="page-main">
-    <section data-test="hero" class="hero">
+    <section class="hero" data-test="hero">
       <h1 class="visually-hidden">Организация походов в горы 'Lifetour'.</h1>
       <div class="hero__swiper swiper">
         <div class="hero__swiper-wrapper swiper-wrapper">
@@ -157,7 +157,7 @@
       </div>
     </section>
 
-    <section data-test="tours" class="tours" id="tours">
+    <section class="tours" data-test="tours" id="tours">
       <div class="tours__container container">
         <h2 class="tours__title primary-title">Ближайшие туры</h2>
 
@@ -380,7 +380,7 @@
       </div>
     </section>
 
-    <section data-test="training" class="training" id="training">
+    <section class="training" data-test="training" id="training">
       <div class="training__container container">
         <h2 class="training__title primary-title">Обучение</h2>
         <p>Обучение проводится квалифицированными специалистами, за плечами которых десятки пройденных маршрутов
@@ -572,7 +572,7 @@
       </div>
     </section>
 
-    <section data-test="about" class="about" id="about">
+    <section class="about" data-test="about" id="about">
       <div class="about__container container">
         <div class="about__photo">
           <picture>
@@ -607,7 +607,7 @@
       </div>
     </section>
 
-    <section data-test="reviews" class="reviews" id="reviews">
+    <section class="reviews" data-test="reviews" id="reviews">
       <div class="reviews__container container">
         <h2 class="reviews__title primary-title">Отзывы</h2>
 
@@ -755,7 +755,7 @@
       </div>
     </section>
 
-    <section data-test="adv" class="adv">
+    <section class="adv" data-test="adv">
       <div class="adv__container container">
         <h2 class="adv__title primary-title">Преимущества</h2>
         <div class="adv__swiper swiper">
@@ -823,7 +823,7 @@
       </div>
     </section>
 
-    <section data-test="gallery" class="gallery" id="gallery">
+    <section class="gallery" data-test="gallery" id="gallery">
       <div class="gallery__container container">
         <h2 class="gallery__title primary-title">Фотогалерея</h2>
         <p>Добавляйте фото с хэштегом #лайфтур, а также отмечайте нас на фото. Лучшие фотографии украсят этот раздел
@@ -933,7 +933,7 @@
       </div>
     </section>
 
-    <section data-test="form" class="form">
+    <section class="form" data-test="form">
       <div class="form__container container">
         <h2>Остались вопросы?</h2>
         <p>Заполните форму и наш оператор свяжется<br>с вами для консультации.</p>
@@ -977,7 +977,7 @@
           <div class="contacts__item contact contact--mail">
             <dt class="contact__name">Email</dt>
             <dd class="contact__value">
-              <a class="contact__link" href="mail-to:info@lifetour.com">info@lifetour.com</a>
+              <a class="contact__link" href="mailto:info@lifetour.com">info@lifetour.com</a>
             </dd>
           </div>
 
