--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lifetour</title>
+  <link rel="preload" href="fonts/montserrat/montserrat-regular.woff2" as="font">
+  <link rel="preload" href="fonts/montserrat/montserrat-bold.woff2" as="font">
+  <link rel="preload" href="fonts/montserrat/montserrat-semibold.woff2" as="font">
+  <link rel="preload" href="fonts/montserrat/montserrat-extrabold.woff2" as="font">
+  <link rel="preload" href="fonts/montserrat/montserrat-light.woff2" as="font">
+  <link rel="preload" href="fonts/montserrat/montserrat-medium.woff2" as="font">
   <link rel="stylesheet" href="sass/style.scss">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page-body">
@@ -14,10 +23,10 @@
     <div class="container header__container">
       <button class="header__burger-button burger" type="button">
         <span class="visually-hidden">Открыть меню</span>
-        <svg class="burger__open-icon" width="22" height="16">
+        <svg class="burger__open-icon" width="26" height="26">
           <use href="/__spritemap#sprite-burger-open"></use>
         </svg>
-        <svg class="burger__close-icon" width="18" height="18">
+        <svg class="burger__close-icon" width="26" height="26">
           <use href="/__spritemap#sprite-burger-close"></use>
         </svg>
       </button>
@@ -548,10 +557,10 @@
 
         <h3 class="training__subtitle">Процесс обучения</h3>
         <ol class="training__process-list">
-          <li class="training__process-item">Изучение спортивного туристского движения</li>
+          <li class="training__process-item">Изучение спортивного<br>туристского движения</li>
           <li class="training__process-item">Подготовка и техническое снаряжение в походах</li>
           <li class="training__process-item">Лекции по окружающей среде, экологии и гигиене</li>
-          <li class="training__process-item">Разъяснение сложности горных препятствий</li>
+          <li class="training__process-item">Разъяснение сложности<br>горных препятствий</li>
         </ol>
       </div>
     </section>
@@ -749,7 +758,7 @@
             <div class="adv__swiper-wrapper swiper-wrapper">
               <div class="adv__slide adv-slide adv-slide--safe swiper-slide">
                 <h3>Безопасность</h3>
-                <p>Уделяем внимание безопасности клиентов, внедряя строгие процедуры и протоколы безопасности. Имеем
+                <p>Уделяем внимание безопасности клиентов, внедряя строгие процедуры<br>и протоколы безопасности. Имеем
                   планы
                   действий на случай непредвиденных обстоятельств и даем гарантию полной безопасности во время всего
                   тура.
@@ -759,22 +768,20 @@
               <div class="adv__slide adv-slide adv-slide--awareness swiper-slide">
                 <h3>Экспертиза и знания</h3>
                 <p>Наша команда опытных гидов имеет обширные знания о местности, погодных условиях и технике
-                  безопасности.
-                  Это гарантирует, что наши клиенты находятся в надежных руках и могут в полной мере насладиться опытом
-                  без опасений.</p>
+                  безопасности.<br>Это гарантирует, что наши клиенты находятся в надежных руках и могут<br>в полной мере насладиться опытом<br>без опасений.</p>
               </div>
 
               <div class="adv__slide adv-slide adv-slide--equipment swiper-slide">
                 <h3>Оборудование и снаряжение</h3>
-                <p>Мы предоставляем клиентам все необходимое оборудование, необходимое для путешествия. Это избавляет
-                  клиентов от необходимости покупать, брать с собой снаряжение, что делает путешествие более удобным и
+                <p>Мы предоставляем клиентам<br>все необходимое оборудование, необходимое для путешествия.<br>Это избавляет
+                  клиентов от&nbsp;необходимости покупать, брать с собой снаряжение,<br>что делает путешествие более удобным<br>и
                   экономически выгодным.</p>
               </div>
 
               <div class="adv__slide adv-slide adv-slide--routes swiper-slide">
                 <h3>Индивидуальные маршруты</h3>
                 <p>Предлагаем широкий выбор туров, отвечающих различным уровням мастерства и интересам. Мы также можем
-                  адаптировать маршруты к вашим конкретным потребностям и предпочтениям, чтобы вы получили
+                  адаптировать маршруты к вашим конкретным потребностям<br>и предпочтениям, чтобы вы получили
                   индивидуальный
                   опыт.</p>
               </div>
@@ -985,7 +992,7 @@
 
           <div class="contacts__item contact contact--address">
             <dt class="contact__name">Адрес</dt>
-            <dd class="contact__value">г. Москва, пр-т Мира, д. 14, офис 101</dd>
+            <dd class="contact__value">г. Москва, пр-т Мира,<br>д. 14, офис 101</dd>
           </div>
         </dl>
         <div class="contacts__map-wrapper">
