--- a/source/index.html
+++ b/source/index.html
@@ -250,8 +250,8 @@
                 <dl class="tour-slide__requirements-list">
                   <div class="tour-slide__requirements-item">
                     <dt class="tour-slide__requirement-term">Сложность:</dt>
-                    <dd class="tour-slide__requirement tour-slide__requirement--difficulty" data-raiting="4">
-                      <span class="visually-hidden">4 из 5</span>
+                    <dd class="tour-slide__requirement tour-slide__requirement--difficulty" data-raiting="3">
+                      <span class="visually-hidden">3 из 5</span>
                     </dd>
                   </div>
                   <div class="tour-slide__requirements-item">
@@ -374,7 +374,7 @@
     <section class="training" data-test="training" id="training">
       <div class="training__container container">
         <h2 class="training__title primary-title">Обучение</h2>
-        <p>Обучение проводится квалифицированными специалистами, за плечами которых десятки пройденных маршрутов
+        <p>Обучение проводится квалифицированными специалистами,<br>за плечами которых десятки пройденных маршрутов
           Кавказа, Крыма, Гималаев, Эльбруса, Алтая, Карелии, Адыгеи и других.</p>
 
         <h3 class="training__subtitle">Наши инструкторы</h3>
@@ -768,26 +768,26 @@
               <div class="adv__slide adv-slide adv-slide--awareness swiper-slide">
                 <h3>Экспертиза и знания</h3>
                 <p>Наша команда опытных гидов имеет обширные знания о местности, погодных условиях и технике
-                  безопасности.<br>Это гарантирует, что наши клиенты находятся в надежных руках и могут<br>в полной мере насладиться опытом<br>без опасений.</p>
+                  безопасности.<br> Это гарантирует,<br> что наши клиенты находятся<br> в надежных руках и могут<br> в полной мере насладиться опытом<br> без опасений.</p>
               </div>
 
               <div class="adv__slide adv-slide adv-slide--equipment swiper-slide">
                 <h3>Оборудование и снаряжение</h3>
-                <p>Мы предоставляем клиентам<br>все необходимое оборудование, необходимое для путешествия.<br>Это избавляет
-                  клиентов от&nbsp;необходимости покупать, брать с собой снаряжение,<br>что делает путешествие более удобным<br>и
+                <p>Мы предоставляем клиентам<br> все необходимое оборудование, необходимое для путешествия.<br> Это избавляет
+                  клиентов от&nbsp;необходимости покупать, брать<br> с собой снаряжение,<br> что делает путешествие более удобным<br> и
                   экономически выгодным.</p>
               </div>
 
               <div class="adv__slide adv-slide adv-slide--routes swiper-slide">
                 <h3>Индивидуальные маршруты</h3>
-                <p>Предлагаем широкий выбор туров, отвечающих различным уровням мастерства и интересам. Мы также можем
-                  адаптировать маршруты к вашим конкретным потребностям<br>и предпочтениям, чтобы вы получили
+                <p>Предлагаем широкий выбор туров, отвечающих различным уровням мастерства и интересам.<br> Мы также можем
+                  адаптировать маршруты к вашим конкретным потребностям<br> и предпочтениям, чтобы вы получили
                   индивидуальный
                   опыт.</p>
               </div>
 
               <div class="adv__slide adv-slide adv-slide--nature swiper-slide">
-                <h3>Бережное отношение к природе</h3>
+                <h3>Бережное отношение<br>к природе</h3>
                 <p>Уделяем первостепенное внимание охране окружающей среды и гарантируем, что туры оказывают минимальное
                   воздействие на природную среду. Наша компания следует принципу «Не оставлять следов».</p>
               </div>
@@ -827,7 +827,7 @@
     <section class="gallery" data-test="gallery" id="gallery">
       <div class="gallery__container container">
         <h2 class="gallery__title primary-title">Фотогалерея</h2>
-        <p>Добавляйте фото с хэштегом #лайфтур, а также отмечайте нас на фото. Лучшие фотографии украсят этот раздел
+        <p>Добавляйте фото с хэштегом #лайфтур,<br> а также отмечайте нас на фото. Лучшие фотографии украсят этот раздел
           нашего сайта.</p>
 
         <div class="gallery__swiper swiper">
