--- a/source/index.html
+++ b/source/index.html
@@ -288,7 +288,7 @@
                   </div>
                 </dl>
 
-                <h3 class="tour-slide__title">Через Фишт к Чёрному морю и обратно</h3>
+                <h3 class="tour-slide__title">Через Фишт<br> к Чёрному морю<br> и обратно</h3>
 
                 <dl class="tour-slide__requirements-list">
                   <div class="tour-slide__requirements-item">
@@ -557,10 +557,10 @@
 
         <h3 class="training__subtitle">Процесс обучения</h3>
         <ol class="training__process-list">
-          <li class="training__process-item">Изучение спортивного<br>туристского движения</li>
+          <li class="training__process-item">Изучение спортивного<br> туристского движения</li>
           <li class="training__process-item">Подготовка и техническое снаряжение в походах</li>
-          <li class="training__process-item">Лекции по окружающей среде, экологии и гигиене</li>
-          <li class="training__process-item">Разъяснение сложности<br>горных препятствий</li>
+          <li class="training__process-item">Лекции<br> по окружающей среде, экологии и гигиене</li>
+          <li class="training__process-item">Разъяснение<br> сложности<br> горных препятствий</li>
         </ol>
       </div>
     </section>
@@ -781,7 +781,7 @@
               <div class="adv__slide adv-slide adv-slide--routes swiper-slide">
                 <h3>Индивидуальные маршруты</h3>
                 <p>Предлагаем широкий выбор туров, отвечающих различным уровням мастерства и интересам.<br> Мы также можем
-                  адаптировать маршруты к вашим конкретным потребностям<br> и предпочтениям, чтобы вы получили
+                  адаптировать маршруты к вашим конкретным потребностям<br> и предпочтениям,<br> чтобы вы получили
                   индивидуальный
                   опыт.</p>
               </div>
